# MdtCMakeConfig

./: .gitignore  .gitlab-ci.yml  BUILD.md  CMakeLists.txt  ConanSplitQt.md  LICENSE  MdtBackground.md  MdtConfig.cmake.in  NoPackageManager.md  README.md  TODO.md  conan-mdt-config.cmake.in
packaging/conan/: conanfile.py  mdtcmakeconfig-conan-cmake-modules.cmake
packaging/conan/test_cmake/: conanfile.py
packaging/conan/test_cmake_find_package_multi/: conanfile.py
packaging/conan/test_cmakedeps/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py
packaging/conan/tests/: README.md
packaging/conan/tests/UserApp/: CMakeLists.txt  conanfile.py
packaging/conan/tests/libs/ItemModel/: conanfile.py
tests/: CMakeLists.txt
tests/UserProject/: CMakeLists.txt
tests/libs/ItemModel/: CMakeLists.txt  Mdt0ItemModelConfig.cmake
